--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -18,4 +18,5 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 // Component styles are injected through grunt
 // injector
 @import 'main/main.scss';
+@import 'newsletter-canvas/newsletter-canvas.scss';
 // endinjector
