--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -28,3 +28,12 @@
     margin-top: 70px;
     border-top: 1px solid #E5E5E5;
 }
+
+.news-canvas {
+    height: 100%;
+    width: 100%;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
