--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -2,7 +2,7 @@
     position: absolute;
     height: 100%;
     overflow: scroll;
-    background: white;
+    background: RGBa(255, 255, 255, 0.5);
     padding: 10px 30px;
 }
 
